CSS fixes for required checkbox (option 3) misalignment.

--- a/src/assets/css/checkbox-alt.css
+++ b/src/assets/css/checkbox-alt.css
@@ -75,7 +75,7 @@
 /* if a checkbox is required, make some space for the
    CSS generated visual indicator. */
 .s-cb input[required] + label {
-  padding-right: .9em;
+  padding-right: 1em;
 }
 
 
